--- a/index.html
+++ b/index.html
@@ -64,11 +64,11 @@
           <div class="lang">
             <div class="lang_btn on">
               <p>KOR</p>
-              <img src="/img/language_on.svg" alt="" />
+              <img src="img/language_on.svg" alt="" />
             </div>
             <div class="lang_btn off">
               <p>ENG</p>
-              <img src="/img/language_off.svg" alt="" />
+              <img src="img/language_off.svg" alt="" />
             </div>
           </div>
           <div class="close_mobile_btn">
@@ -143,7 +143,7 @@
     <main>
       <section class="search">
         <div class="main_logo">
-          <img src="/img/main_logo.svg" alt="" />
+          <img src="img/main_logo.svg" alt="" />
         </div>
         <div class="input_wrap">
           <input type="search" name="" id="" placeholder="궁금한 것은 무엇이든 물어보세요." />
@@ -157,7 +157,7 @@
       <section class="faq">
         <div class="inner">
           <div class="text_box">
-            <img src="/img/qna_icon.svg" alt="" />
+            <img src="img/qna_icon.svg" alt="" />
             <h2 class="title">자주하는 질문</h2>
             <!-- <a href="faq.html">더보기 <i class="fa-solid fa-angle-right"></i></a> -->
           </div>
@@ -172,13 +172,13 @@
               <div class="qna_list">
                 <div class="que active">
                   <div>
-                    <b><img src="/img/question.svg" alt="" /></b>
+                    <b><img src="img/question.svg" alt="" /></b>
                     <p>tab1 허리 뼈 소리나게 돌리고난 후 다음날 너무 아파요. 어떤치료를 받아야할까요?</p>
                   </div>
                   <i class="fa-solid fa-angle-down"></i>
                 </div>
                 <div class="ans active">
-                  <b><img src="/img/answer.svg" alt="" /></b>
+                  <b><img src="img/answer.svg" alt="" /></b>
                   <p>
                     안녕하세요. 홍덕진 의사입니다.<br /><br />
                     허리 통증을 유발하는 기전은 흔히들 잘 알고 있는 디스크 (추간판 탈출증) 외에도 다양합니다.<br />
@@ -193,13 +193,13 @@
               <div class="qna_list">
                 <div class="que">
                   <div>
-                    <b><img src="/img/question.svg" alt="" /></b>
+                    <b><img src="img/question.svg" alt="" /></b>
                     <p>tab1 허리 뼈 소리나게 돌리고난 후 다음날 너무 아파요. 어떤치료를 받아야할까요?</p>
                   </div>
                   <i class="fa-solid fa-angle-down"></i>
                 </div>
                 <div class="ans">
-                  <b><img src="/img/answer.svg" alt="" /></b>
+                  <b><img src="img/answer.svg" alt="" /></b>
                   <p>
                     안녕하세요. 홍덕진 의사입니다.<br /><br />
                     허리 통증을 유발하는 기전은 흔히들 잘 알고 있는 디스크 (추간판 탈출증) 외에도 다양합니다.<br />
@@ -216,13 +216,13 @@
               <div class="qna_list">
                 <div class="que">
                   <div>
-                    <b><img src="/img/question.svg" alt="" /></b>
+                    <b><img src="img/question.svg" alt="" /></b>
                     <p>tab2 허리 뼈 소리나게 돌리고난 후 다음날 너무 아파요. 어떤치료를 받아야할까요?</p>
                   </div>
                   <i class="fa-solid fa-angle-down"></i>
                 </div>
                 <div class="ans">
-                  <b><img src="/img/answer.svg" alt="" /></b>
+                  <b><img src="img/answer.svg" alt="" /></b>
                   <p>
                     안녕하세요. 홍덕진 의사입니다.<br /><br />
                     허리 통증을 유발하는 기전은 흔히들 잘 알고 있는 디스크 (추간판 탈출증) 외에도 다양합니다.<br />
@@ -237,13 +237,13 @@
               <div class="qna_list">
                 <div class="que">
                   <div>
-                    <b><img src="/img/question.svg" alt="" /></b>
+                    <b><img src="img/question.svg" alt="" /></b>
                     <p>tab1 허리 뼈 소리나게 돌리고난 후 다음날 너무 아파요. 어떤치료를 받아야할까요?</p>
                   </div>
                   <i class="fa-solid fa-angle-down"></i>
                 </div>
                 <div class="ans">
-                  <b><img src="/img/answer.svg" alt="" /></b>
+                  <b><img src="img/answer.svg" alt="" /></b>
                   <p>
                     안녕하세요. 홍덕진 의사입니다.<br /><br />
                     허리 통증을 유발하는 기전은 흔히들 잘 알고 있는 디스크 (추간판 탈출증) 외에도 다양합니다.<br />
@@ -260,13 +260,13 @@
               <div class="qna_list">
                 <div class="que">
                   <div>
-                    <b><img src="/img/question.svg" alt="" /></b>
+                    <b><img src="img/question.svg" alt="" /></b>
                     <p>tab1 허리 뼈 소리나게 돌리고난 후 다음날 너무 아파요. 어떤치료를 받아야할까요?</p>
                   </div>
                   <i class="fa-solid fa-angle-down"></i>
                 </div>
                 <div class="ans">
-                  <b><img src="/img/answer.svg" alt="" /></b>
+                  <b><img src="img/answer.svg" alt="" /></b>
                   <p>
                     안녕하세요. 홍덕진 의사입니다.<br /><br />
                     허리 통증을 유발하는 기전은 흔히들 잘 알고 있는 디스크 (추간판 탈출증) 외에도 다양합니다.<br />
@@ -281,13 +281,13 @@
               <div class="qna_list">
                 <div class="que">
                   <div>
-                    <b><img src="/img/question.svg" alt="" /></b>
+                    <b><img src="img/question.svg" alt="" /></b>
                     <p>tab1 허리 뼈 소리나게 돌리고난 후 다음날 너무 아파요. 어떤치료를 받아야할까요?</p>
                   </div>
                   <i class="fa-solid fa-angle-down"></i>
                 </div>
                 <div class="ans">
-                  <b><img src="/img/answer.svg" alt="" /></b>
+                  <b><img src="img/answer.svg" alt="" /></b>
                   <p>
                     안녕하세요. 홍덕진 의사입니다.<br /><br />
                     허리 통증을 유발하는 기전은 흔히들 잘 알고 있는 디스크 (추간판 탈출증) 외에도 다양합니다.<br />
@@ -304,13 +304,13 @@
               <div class="qna_list">
                 <div class="que">
                   <div>
-                    <b><img src="/img/question.svg" alt="" /></b>
+                    <b><img src="img/question.svg" alt="" /></b>
                     <p>tab1 허리 뼈 소리나게 돌리고난 후 다음날 너무 아파요. 어떤치료를 받아야할까요?</p>
                   </div>
                   <i class="fa-solid fa-angle-down"></i>
                 </div>
                 <div class="ans">
-                  <b><img src="/img/answer.svg" alt="" /></b>
+                  <b><img src="img/answer.svg" alt="" /></b>
                   <p>
                     안녕하세요. 홍덕진 의사입니다.<br /><br />
                     허리 통증을 유발하는 기전은 흔히들 잘 알고 있는 디스크 (추간판 탈출증) 외에도 다양합니다.<br />
@@ -325,13 +325,13 @@
               <div class="qna_list">
                 <div class="que">
                   <div>
-                    <b><img src="/img/question.svg" alt="" /></b>
+                    <b><img src="img/question.svg" alt="" /></b>
                     <p>tab1 허리 뼈 소리나게 돌리고난 후 다음날 너무 아파요. 어떤치료를 받아야할까요?</p>
                   </div>
                   <i class="fa-solid fa-angle-down"></i>
                 </div>
                 <div class="ans">
-                  <b><img src="/img/answer.svg" alt="" /></b>
+                  <b><img src="img/answer.svg" alt="" /></b>
                   <p>
                     안녕하세요. 홍덕진 의사입니다.<br /><br />
                     허리 통증을 유발하는 기전은 흔히들 잘 알고 있는 디스크 (추간판 탈출증) 외에도 다양합니다.<br />
